# emna

./: .gitignore  AbstractAnalyticalFeatureExtraction.hs  AbstractFeatureExtraction.hs  AnalyticalFeatureExtraction.hs  ExtractionPoint.hs  FeatureExtraction.hs  Length.proof  Main.hs  Reverse-fails.proof  Reverse-handwritten.proof  Reverse-multiple.proof  Reverse-rev-tree.proof  Reverse-rev.proof  Reverse-tree-rev.proof  Reverse-tree.proof  Reverse-works.proof  Reverse.proof  SymbolicFeatureExtraction.hs  Utils.hs  bobo.proof  emna.cabal  firstorother3.txt  guessvariable2.txt  guessvariable3.txt  indornot  lib.tiplib  librarify.hs  mynicefile-prop_01.tiplib  mynicefile-prop_02.tiplib  mynicefile-prop_03.tiplib  result.txt  results.txt  testtesting.txt
clustering/: fa_d1_c2.txt  fa_d1_c20.txt  fa_d1_c8.txt  fa_d2_c2.txt  fa_d2_c20.txt  fa_d2_c8.txt  fa_d3_c2.txt  fa_d3_c20.txt  fa_d3_c8.txt  fs_d1_c2.txt  fs_d1_c20.txt  fs_d1_c8.txt  fs_d2_c2.txt  fs_d2_c20.txt  fs_d2_c8.txt  fs_d3_c2.txt  fs_d3_c20.txt  fs_d3_c8.txt
clustering_analytics/: afa_d1_c2.txt  afa_d1_c20.txt  afa_d1_c8.txt  afa_d2_c2.txt  afa_d2_c20.txt  afa_d2_c8.txt  afa_d3_c2.txt  afa_d3_c20.txt  afa_d3_c8.txt  afs_d1_c2.txt  afs_d1_c20.txt  afs_d1_c8.txt  afs_d2_c2.txt  afs_d2_c20.txt  afs_d2_c8.txt  afs_d3_c2.txt  afs_d3_c20.txt  afs_d3_c8.txt  ala_d1_c2.txt  ala_d1_c20.txt  ala_d1_c8.txt  ala_d2_c20.txt  ala_d2_c8.txt  ala_d3_c2.txt  ala_d3_c20.txt  ala_d3_c8.txt  als_d1_c20.txt  als_d1_c8.txt  als_d2_c2.txt  als_d2_c20.txt  als_d2_c8.txt  als_d3_c2.txt  als_d3_c20.txt  als_d3_c8.txt
clustering_funcs/: afa_d1_c2.txt  ala_d3_c2.txt  als_d1_c2.txt  als_d3_c2.txt  als_d3_c8.txt  fa_d1_c2.txt  fa_d1_c20.txt  fa_d1_c8.txt  fa_d2_c2.txt  fa_d2_c20.txt  fa_d2_c8.txt  fa_d3_c2.txt  fa_d3_c20.txt  fa_d3_c8.txt  fs_d1_c2.txt  fs_d1_c20.txt  fs_d1_c8.txt  fs_d2_c2.txt  fs_d2_c20.txt  fs_d2_c8.txt  fs_d3_c2.txt  fs_d3_c20.txt  fs_d3_c8.txt
clustering_lemmas/: afs  als  la_d1_c2.txt  la_d1_c20.txt  (+16 more)
(+76 files in other folders)
