name:                emna
version:             0.1
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Dan Rosén
maintainer:          danr@chalmers.se
category:            Logic
build-type:          Simple
cabal-version:       >=1.10

executable emna
  main-is:             Main.hs
  ghc-options:         -dynamic -threaded
  -- other-modules:
  build-depends:       base,
                       tip-haskell-frontend >=0.2,
                       tip-spec,
                       tip-lib >=0.2,
                       geniplate-mirror >=0.7,
                       stm-promise,
                       pretty,
                       cmdargs >=0.10,
                       process,
                       containers,
                       testing-feat,
                       QuickCheck,
                       directory >= 1.2.2,
                       mtl >=2.2 && <2.3,
                       postgresql-simple >= 0.5.1.2,
                       bytestring >= 0.10.6.0,
                       FindBin
  -- hs-source-dirs:
  default-language:    Haskell2010

executable extractFeatures
  main-is:          scripts/extractFeatures.hs
  build-depends:       base,
                       tip-haskell-frontend >=0.2,
                       tip-spec,
                       tip-lib >=0.2,
                       geniplate-mirror >=0.7,
                       stm-promise,
                       pretty,
                       cmdargs >=0.10,
                       process,
                       containers,
                       testing-feat,
                       QuickCheck,
                       directory >= 1.2.2,
                       mtl >=2.2 && <2.3,
                       postgresql-simple >= 0.5.1.2,
                       bytestring >= 0.10.6.0,
                       FindBin
  default-language:    Haskell2010
